# m-treat_frontend_technical_assessment

./: .env  README.md
backend/: README.md
backend/app/: README.md  pyproject.toml
backend/app/api/api/: settings.py
backend/app/api/api/models/: README.md
backend/app/api/api/models/database/: README.md  auth_database.sql  schema.prisma  user_service.py  user_service_test.py
backend/app/api/authentication/: models.py  serializers.py  urls.py  views.py
backend/app/api/authentication/migrations/: 0001_initial.py  0002_remove_user_last_login.py  0003_user_created_at_user_updated_at.py
backend/app/app/: settings.py  urls.py
backend/app/models/database/: README.md  auth_database.sql  example.py  schema.prisma  user_service.py
backend/app/models/database/migrations/20250102171859_update_user_id_to_uuid/: migration.sql
backend/app/tests/: README.md
frontend/: README.md
frontend/app/: index.html  package.json  postcss.config.js  postcss.config.mjs  tailwind.config.js  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1736864234886-9ed25db0e4d8f.mjs
frontend/app/src/: App.css  App.tsx  index.css  main.tsx
frontend/app/src/components/: PhoneInputComp.tsx
frontend/app/src/config/: helpers.ts
frontend/app/src/controllers/: AuthController.ts  HomeController.ts
frontend/app/src/models/: AuthModel.ts  HomeModel.ts
frontend/app/src/pages/: AuthPage.tsx  HomePage.tsx  LandingPage.tsx
frontend/app/src/store/: store.ts
frontend/app/src/store/features/: README.md
frontend/app/src/store/features/user/: userSlice.ts
