[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["wxllxngton <jjngugi27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
mozilla-django-oidc = "^4.0.1"
gunicorn = "^23.0.0"
cryptography = "^43.0.1"
drf-jwt = "^1.19.2"
pyjwt = "^2.9.0"
requests = "^2.32.3"
django-cors-headers = "^4.4.0"
prisma = "^0.15.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
